modules/discussion/styles/topic.less
@import 'settings/colors.less';
@import 'mediawiki.mixins.less';

.flow-topic-container {
	padding-bottom: 20px;

	&>*:last-child {
		// This combines with the padding-bottom: 20px on .flow-topic-container
		// for a total 30px gap. We want the gap to be only 20px when topic is
		// collapsed, which is why we're adding the remaining 10px to last child.
		padding-bottom: 10px;
	}

	&.flow-topic-moderated {
		.flow-topic-children-container {
			display: none;
		}
		.flow-topic-posts-meta {
			display: none;
		}
	}

	.flow-topic-moderated {
		padding-left: 22px !important;

		background-position: left;
		background-size: 14px auto;
		background-repeat: no-repeat;

		// hide user links until hovered
		.mw-usertoollinks {
			color: @post-title-color;
			opacity: 0;
			transition: opacity 0.2s;
		}
		&:hover {
			.mw-usertoollinks {
				opacity: 1;
			}
		}
	}

	.flow-topic-moderated-hide {
		.background-image-svg('../../base/images/hidden_normal.svg', '../../base/images/hidden_normal.png');
	}

	.flow-topic-moderated-delete {
		.background-image-svg('../../base/images/deleted_normal.svg', '../../base/images/deleted_normal.png');
	}

	.flow-topic-moderated-suppress {
		.background-image-svg('../../base/images/suppressed_normal.svg', '../../base/images/suppressed_normal.png');
	}


	.flow-titlebar {
		position: relative;

		// override mw-ui-button style
		text-align: left;
		display: block;
		padding: 15px 22px;
		font-weight: normal;
		background: @topic-titlebar-background-color;
		font-size: 16px;

		line-height: 28px;
		color: @topic-titlebar-text-color !important; // override mw-ui-button

		// override mw-ui-button:hover style
		&:hover,
		&.mw-ui-hover {
			background: @topic-titlebar-background-color;
		}

		.flow-topic-title {
			padding-bottom: 15px;

			// leave some room for .flow-topic-actions-link on the right
			margin-right: 44px;

			h2 {
				font-weight: bold;
				font-size: 24px;
				line-height: 30px;
				color: @topic-title-color;

				// override default h2 style
				border: none;
				padding: 0;
				margin: 0;

				&.flow-topic-moderated {
					font-size: 18px;
					color: #aaa;
				}
			}
		}

		.flow-tipsy-link {
			position: absolute;
			right: 12px;
			top: 5px;

			width: 20px;
			height: 20px;
			text-indent: -9999px;
			padding: 10px;

			background-position: center;
			background-size: 20px auto;
			background-repeat: no-repeat;
			.background-image-svg('../../base/images/junkdrawer_hover.svg', '../../base/images/junkdrawer_hover.png');

			opacity: 0.3;
			&:hover {
				opacity: 1;
			}
		}

		.flow-tipsy-flyout {
			position: absolute;
			top: 49px; // 14px + (15px top padding + 20px icon height)
			right: 0;
		}

		ul.flow-topic-posts-meta {
			list-style: none;
			margin: 0;

			li {
				line-height: 16px;
				padding: 0 0 9px 0;

				&:last-child {
					padding: 0;
				}

				a {
					color: inherit;
					text-decoration: underline;
				}
			}
		}

		.flow-datestamp {
			margin: 0;
			color: #898989 !important;

			position: absolute;
			right: 22px;
			bottom: 16px;

			a {
				color: inherit;
			}
		}

		.flow-icon {
			// additional push to the right because of container's padding & border
			margin-right: -23px; // container's right padding + right border
		}

		.flow-edit-topic-link {
			background-position: center;
			background-size: 20px auto;
			background-repeat: no-repeat;
			.background-image-svg('../../base/images/edit_hover_ltr.svg', '../../base/images/edit_hover_ltr.png');
		}

		.flow-icon-permalink {
			background-position: center;
			background-size: 20px auto;
			background-repeat: no-repeat;
			.background-image-svg('../../base/images/permalink_hover_ltr.svg', '../../base/images/permalink_hover_ltr.png');
		}

		.flow-icon-watchlist {
			background-position: center;
			background-size: 20px auto;
			background-repeat: no-repeat;
			.background-image-svg('../../base/images/watchlist_hover.svg', '../../base/images/watchlist_hover.png');

			&.flow-icon-watchlist-active {
				.background-image-svg('../../base/images/watchlist_active.svg', '../../base/images/watchlist_active.png');
			}
		}
	}

	.flow-edit-title-form {
		.flow-edit-title-textbox {
			width: 100%;
		}

		.flow-edit-title-controls {
			margin-top: 5px;
			text-align: right;
		}
	}
}

.flow-new-topic-container {
	.flow-newtopic-form {
		padding-bottom: 0px;

		.flow-newtopic-title {
			font-weight: bold;

			padding-left: 45px;

			background-position: left 10px center;
			background-size: 25px auto;
			background-repeat: no-repeat;
			.background-image-svg('../../base/images/createtopic_normal_ltr.svg', '../../base/images/createtopic_normal_ltr.png');
		}

		.flow-post-form-controls {
			margin-top: 5px;
			text-align: right;
		}
	}
}

.flow-topic-reply-container {
	padding-left: 22px;
	margin-top: 20px;

	.flow-creator {
		font-weight: bold;
		color: @post-title-color;
		padding-bottom: 22px;
	}

	.flow-topic-reply-form {
		margin-top: 22px;

		.flow-post-form-controls {
			margin-top: 5px;
			text-align: right;
		}
	}

	// Make the "comment on topic" textarea look like the "start a new topic"
	// input field. Once the textarea is focussed, it can appear like a regular
	// textarea. The parent's :not(:active) will make sure that when clicking
	// outside the textarea, but still in the parent, the textarea does not yet
	// shrink to the input-like height; otherwise, attempting to click "submit"
	// will shrink the textarea, and the "submit" button will be missed.
	&:not(:active) {
		.flow-topic-reply-content:empty:not(:focus) {
			height: 34px;
		}
	}
}

.flow-topic-permalink-warning,
.flow-revision-permalink-warning,
.flow-compare-revisions-header {
	color: #898989;
	border-bottom: 1px solid #ccc;
	padding-bottom: 0.5em;
	margin-bottom: 1em;

	a {
		color: #777 !important;
		font-weight: bold;
	}
}

